k8s/robert-shop-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: robert-shop
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: robert-shop
  template:
    metadata:
      labels:
        app: robert-shop
    spec:
      containers:
      - name: robert-shop
        image: robert-shop:5980577
        ports:
        - name: http
          containerPort: 80
