k8s/robert-shop-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: robert-shop
  name: robert-shop
  namespace: default
spec:
  ports:
  - name: web
    port: 80
    targetPort: 80
    nodePort: 30080
  selector:
    app: robert-shop
  type: NodePort
