k8s/robert-shop-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress-robert-shop
  namespace: default
spec:
  rules:
  - host: robert.shop.yunxiao.com
    http:
      paths:
      - path:
        backend:
          serviceName: robert-shop
          servicePort: 80
